--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    color: #e2c044;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -83,7 +83,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background: #95b2b8;
 }
 .navbar .max-width{
     display: flex;
@@ -96,7 +96,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: crimson;
+    color: #e2c044;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -115,7 +115,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: crimson;
+    color: #95b2b8;
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -131,7 +131,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: crimson;
+    background: #95b2b8;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -185,23 +185,23 @@ section .title::after{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: crimson;
+    color: #e2c044;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: crimson;
+    background: #95b2b8;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #95b2b8;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: crimson;
+    color: #95b2b8;
     background: none;
 }
 /* about section styling */
@@ -226,25 +226,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: crimson;
+    color: #95b2b8;
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: crimson;
+    background: #95b2b8;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #95b2b8;
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: crimson;
+    color: #95b2b8;
     background: none;
 }
 /* services section styling */
@@ -272,7 +272,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
-    background: crimson;
+    background: #95b2b8;
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -282,7 +282,7 @@ section .title::after{
 }
 .services .serv-content .card i{
     font-size: 50px;
-    color: crimson;
+    color: #95b2b8;
     transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
@@ -311,18 +311,18 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: crimson;
+    background: #95b2b8;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid #95b2b8;
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: crimson;
+    color: #95b2b8;
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -350,7 +350,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: crimson;
+    background: #C33C54;
 }
 .skills-content .right .html::before{
     width: 90%;
@@ -380,7 +380,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover{
-    background: crimson;
+    background: #95b2b8;
 }
 .teams .carousel .card .box{
     display: flex;
@@ -402,7 +402,7 @@ section .title::after{
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid crimson;
+    border: 5px solid #95b2b8;
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover img{
@@ -418,7 +418,7 @@ section .title::after{
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid crimson!important;
+    border: 2px solid #95b2b8!important;
     transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -427,7 +427,7 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: crimson!important;
+    background: #95b2b8!important;
 }
 /* contact section styling */
 .contact{
@@ -465,13 +465,13 @@ section .title::after{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: crimson;
+    color: #95b2b8;
 }
 .contact .contact-content .info .head{
     font-weight: 500;
 }
 .contact .contact-content .info .sub-title{
-    color: crimson;
+    color: #e2c044;
 }
 .contact .contact-content .right .socials{
     display: grid;
@@ -485,7 +485,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: crimson;
+    color: #95b2b8;
     text-decoration: none;
 }
 footer span a:hover{
