--- a/styles.css
+++ b/styles.css
@@ -310,15 +310,15 @@ section .title::after{
     font-family: 'Poppins',sans-serif;
 }
 .skills .skills-content .left a{
-    display: inline-block;
-    background: #95b2b8;
+    /*display: inline-block;
+    background: #95b2b8; */
     color: #fff;
-    font-size: 18px;
+    /*font-size: 18px;*/
     font-weight: 500;
-    padding: 8px 16px;
+    /*padding: 8px 16px;*/
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid #95b2b8;
+    /*border: 2px solid #95b2b8;*/
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
