--- a/styles.css
+++ b/styles.css
@@ -350,7 +350,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: #C33C54;
+    background: #05668D;
 }
 .skills-content .right .html::before{
     width: 90%;
