--- a/styles.css
+++ b/styles.css
@@ -312,7 +312,7 @@ section .title::after{
 .skills .skills-content .left a{
     /*display: inline-block;
     background: #95b2b8; */
-    color: #fff;
+    color: #E2C044;
     /*font-size: 18px;*/
     font-weight: 500;
     /*padding: 8px 16px;*/
