--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,7 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: #95b2b8;
+    color: #e2c044;
 }
 .about .about-content .right p{
     text-align: justify;
